# project-alpha

./: .dockerignore  .env.example  .gitignore  QUICK_START.md  README.md  docker-compose.yml  http.rest  package.json
.claude/: settings.local.json
docs/: database-troubleshooting.md  encoding-fix.md  environment-setup.md  phase2-summary.md  project-structure.md  scripts-guide.md
scripts/: README.md  create-tables.sql  init-db.sh  seed-db.sh  setup.sh  test.sh
specs/: 0001-spec.md  0002-implementation-plan.md  instructions.md
ticket-backend/: .env.example  Cargo.toml  Dockerfile
ticket-backend/migrations/: 001_create_tables.sql
ticket-backend/scripts/: create_indexes.sql
ticket-backend/src/: config.rs  database.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs
ticket-backend/src/handlers/: mod.rs  tags.rs  tickets.rs
ticket-backend/src/repositories/: mod.rs  tags.rs  tickets.rs
ticket-backend/src/services/: mod.rs
ticket-backend/src/utils/: mod.rs
ticket-backend/tests/: integration_tests.rs
ticket-frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
ticket-frontend/src/: App.tsx
ticket-frontend/src/components/: AdvancedSearch.tsx  Layout.tsx  TagSelector.tsx  TicketCard.tsx  TicketForm.tsx  index.ts
ticket-frontend/src/pages/: HomePage.tsx  TagManagePage.tsx  index.ts
ticket-frontend/src/services/: api.ts  client.ts  health.ts  index.ts  tags.ts  tickets.ts
ticket-frontend/src/stores/: app-store.ts  index.ts  tag-store.ts  ticket-store.ts  ticketStore.ts
ticket-frontend/src/types/: api.ts  (+4 more)
(+17 files in other folders)
