[package]
name = "ticket-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web框架
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# 环境变量
dotenv = "0.15"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 验证
validator = { version = "0.18", features = ["derive"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
# 测试
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
urlencoding = "2.1"

[profile.dev]
debug = true